
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct inode {int dummy; } ;
struct buffer_head {scalar_t__ b_blocknr; } ;
typedef int handle_t ;
typedef scalar_t__ ext4_fsblk_t ;
typedef int __le32 ;


 int BUFFER_TRACE (struct buffer_head*,char*) ;
 int EXT4_ERROR_INODE (struct inode*,char*,unsigned long long) ;
 int * EXT4_JOURNAL (struct inode*) ;
 scalar_t__ bh2jh (struct buffer_head*) ;
 int ext4_clear_blocks (int *,struct inode*,struct buffer_head*,scalar_t__,unsigned long,int *,int *) ;
 int ext4_handle_dirty_metadata (int *,struct inode*,struct buffer_head*) ;
 int ext4_journal_get_write_access (int *,struct buffer_head*) ;
 scalar_t__ le32_to_cpu (int ) ;

__attribute__((used)) static void ext4_free_data(handle_t *handle, struct inode *inode,
      struct buffer_head *this_bh,
      __le32 *first, __le32 *last)
{
 ext4_fsblk_t block_to_free = 0;
 unsigned long count = 0;
 __le32 *block_to_free_p = ((void*)0);


 ext4_fsblk_t nr;
 __le32 *p;

 int err = 0;

 if (this_bh) {
  BUFFER_TRACE(this_bh, "get_write_access");
  err = ext4_journal_get_write_access(handle, this_bh);


  if (err)
   return;
 }

 for (p = first; p < last; p++) {
  nr = le32_to_cpu(*p);
  if (nr) {

   if (count == 0) {
    block_to_free = nr;
    block_to_free_p = p;
    count = 1;
   } else if (nr == block_to_free + count) {
    count++;
   } else {
    err = ext4_clear_blocks(handle, inode, this_bh,
              block_to_free, count,
              block_to_free_p, p);
    if (err)
     break;
    block_to_free = nr;
    block_to_free_p = p;
    count = 1;
   }
  }
 }

 if (!err && count > 0)
  err = ext4_clear_blocks(handle, inode, this_bh, block_to_free,
     count, block_to_free_p, p);
 if (err < 0)

  return;

 if (this_bh) {
  BUFFER_TRACE(this_bh, "call ext4_handle_dirty_metadata");







  if ((EXT4_JOURNAL(inode) == ((void*)0)) || bh2jh(this_bh))
   ext4_handle_dirty_metadata(handle, inode, this_bh);
  else
   EXT4_ERROR_INODE(inode,
      "circular indirect block detected at "
      "block %llu",
    (unsigned long long) this_bh->b_blocknr);
 }
}
